--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,7 +1,7 @@
 @use '../functions' as fn;
 
 .navigation {
-	--spacing-links-horizontal: #{fn.spacing(2)};
+	--spacing-links-horizontal: var(--blw-spacing-md);
 	--spacing-links-vertical: #{fn.spacing(1.25)};
 
 	margin: 0;
